--- a/fullstack/src/views/category.ejs
+++ b/fullstack/src/views/category.ejs
@@ -100,7 +100,7 @@
               <div class="row">
                 <div class="col-xs-9">
                   <h4><span class="label label-default">97thfloor.com</span></h4><h4>
-                  <small style="font-family:courier,'new courier';" class="text-muted"><a href="#" class="text-muted">Read More</a></small>
+                  <small style="font-family:courier,'new courier';" class="text-muted"><a href="/product/category/<%=category_data[i].id%>" class="text-muted">Read More</a></small>
                   </h4></div>
                 <div class="col-xs-3"></div>
               </div>
